Fix usage of netty buffers in unit tests. Add unloadChunk and getOrGenerateChunk for forcing chunk unloading and generation from the API